# oats

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  EXPR_MODULE_REVIEW_SUMMARY.md  EXPR_MODULE_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODULARIZATION_PLAN.md  Oats.toml.example  README.md  SECURITY.md  TODO.md  TYPE_PARSER_MINIMAL_TEST.rs  add  add.ll  analyze_commits.sh  auto_rewrite_commits.sh  await_code.txt  await_code_indented.txt  call_code.txt  call_code_indented.txt  call_code_proper.txt  class_field  commit_improvement_plan.md  extract_call.py  extract_call_v2.py  fibonaci  fibonaci.ll  field_write  main  main.ll  rewrite_commits.sh  rt_main.c  test_temporal.oats
crates/oats/: Cargo.toml
crates/oats/src/: builder.rs  diagnostics.rs  lib.rs  main.rs  parser.rs  types.rs
crates/oats/src/codegen/: const_eval.rs  emit.rs  emit.rs.test  escape.rs  expr.rs  expr.rs.backup  helpers.rs  mod.rs  stmt.rs
crates/oats/tests/: aot_runner_integration.rs  arrays_and_loops.rs  arrow_functions.rs  class_fields.rs  class_lowering.rs  codegen.rs  constructor_params.rs  deno_compat.rs  diagnostics_and_forof.rs  dump_all_unary.rs  dump_unary_ast.rs  dump_update_expr.rs  end_to_end.rs  field_write.rs  for_loop_and_if.rs  ir_tests.rs  loops_and_fields.rs  parsing.rs  promise_type.rs  regress_cycle_reclaim.rs  semicolon_edge_tests.rs  semicolon_tests.rs  template_literals.rs  unary_operators.rs
crates/oats/tests/codegen/: aot_runner_integration.rs  arrays_and_loops.rs  class_fields.rs  class_lowering.rs  closure_weak_capture.rs  codegen_snapshot.rs  const_object_ir.rs  constructor_params.rs  diagnostics_and_forof.rs  escape_analysis.rs  field_write.rs  for_loop_and_if.rs  generics_ir.rs  ir_tests.rs  loops_and_fields.rs  object_literals.rs  promise_type.rs  regress_cycle_reclaim.rs  typeof_union.rs  unary_operators.rs  union_types.rs  weak_helper_direct.rs  weak_refs.rs
crates/oats/tests/codegen/snapshots/: codegen__codegen_snapshot__snapshot_add_example_ir.snap
crates/oats/tests/common/: deno_adapter.rs  mod.rs
crates/oats/tests/end_to_end/: end_to_end.rs  interfaces_types.rs
crates/oats/tests/parsing/: arrow_functions.rs  dump_all_unary.rs  dump_token_type.rs  dump_tokens.rs  dump_unary_ast.rs  dump_update_expr.rs  semicolon_tests.rs  template_literals.rs
crates/oatsc/: Cargo.toml
crates/oatsc/src/: builder.rs  constants.rs  diagnostics.rs  extern_resolution.rs  lib.rs  linking.rs  main.rs  parser.rs  rta.rs  runtime_fetch.rs  runtime_fetch_README.md  runtime_functions.rs  types.rs
crates/oatsc/src/codegen/: const_eval.rs  const_globals.rs  emit.rs  escape.rs  expr.rs  generics.rs  helpers.rs  host_main.rs  mod.rs  runtime_decls.rs  stmt.rs  utils.rs
crates/oatsc/src/codegen/emit/: async_handling.rs  constructors.rs  enums.rs  functions.rs  generator_handling.rs  mod.rs
crates/oatsc/src/codegen/expr/: arrow_expr.rs  assignments.rs  async_expr.rs  binary_ops.rs  calls.rs  closures.rs  (+15 more)
crates/oatsc/tests/: codegen.rs  common.rs  deno_compat.rs  typescript_conformance.rs  typescript_features.rs
crates/oatsc/tests/codegen/: aot_runner_integration.rs  arrays_and_loops.rs  arrow_return_inference.rs  class_fields.rs  closure_weak_capture.rs  codegen_snapshot.rs  const_eval.rs  const_interning.rs  const_object_ir.rs  constructor_params.rs  diagnostics_and_forof.rs  escape_analysis.rs  field_write.rs  for_loop_and_if.rs  generics_ir.rs  ir_tests.rs  object_literals.rs  promise_type.rs  regress_cycle_reclaim.rs  typeof_union.rs  union_types.rs  unowned_refs.rs  weak_refs.rs
crates/oatsc/tests/common/: mod.rs
crates/oatsc/tests/end_to_end/: end_to_end.rs  interfaces_types.rs
crates/oatsc/tests/parsing/: arrow_functions.rs  dump_all_unary.rs  dump_token_type.rs  dump_tokens.rs  dump_unary_ast.rs  dump_update_expr.rs  semicolon_edge_tests.rs  semicolon_tests.rs  template_literals.rs
crates/oatsc/tests/snapshots/: codegen_snapshot__snapshot_add_example_ir.snap
crates/runtime/: Cargo.toml
crates/runtime/src/: array.rs  collector.rs  ffi.rs  header.rs  heap.rs  lib.rs  object.rs  process.rs  promise.rs  rc.rs  string.rs  utils.rs
crates/std/: Cargo.toml  build.rs
crates/std/src/: actor.rs  actor_safe.rs  console.rs  core.rs  env.rs  error.rs  format.rs  fs.rs  fs_safe.rs  hash.rs  io.rs  lib.rs  math.rs  net.rs  path.rs  process.rs  random.rs  raw.rs  string.rs  sys.rs  temporal.rs  time.rs
crates/toasty/: Cargo.toml  README.md
crates/toasty/src/: build.rs  cli.rs  cli_flags.rs  commands.rs  compiler.rs  compiler_fetch.rs  config.rs  diagnostics.rs  env.rs  error.rs  fetch.rs  lib.rs  linker.rs  main.rs  manifest.rs  module_resolution.rs  package_graph.rs  preflight.rs  project.rs  runtime_fetch.rs  runtime_fetch_README.md
crates/toasty/tests/: integration.rs  module_resolution.rs  verbose.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
(+187 files in other folders)
