
[workspace]
resolver = "2"
members = ["crates/oatsc", "crates/runtime", "crates/toasty"]
exclude = ["fuzz"]

[profile.dev]
debug-assertions = false

[profile.test]
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

