[workspace]
resolver = "2"
members = ["crates/oatsc", "crates/runtime", "crates/toasty", "crates/std", "crates/oats_primitives"]
exclude = ["fuzz"]

[profile.dev]
debug-assertions = false

[profile.test]
debug-assertions = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

