[package]
name = "oats"
version = "0.1.0"
edition = "2024"
license = "zlib-acknowledgement"
description = "Oats AOT TypeScript compiler"
repository = "https://github.com/Chrono-byte/oats"

[dependencies]
deno_ast = "0.50.2"
inkwell = { version = "0.6.0", features = ["llvm18-1", "llvm18-1-prefer-dynamic"] }
anyhow = "1.0"
url = "2.4"
swc_ecma_lexer = "23.0.2"

